# mhost

./: .appveyor.yml  .copyright.tmpl  .editorconfig  .gitignore  .pre-commit-config.yaml  .rpm  .rustfmt.toml  .travis.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  HomebrewFormula  LICENSE  LICENSE-MIT  Makefile  README.adoc  README.md  ROADMAP.md  TODO.md  build.rs
.ci/: before_deploy.ps1  before_deploy.sh  cargo_publish.sh  script.sh
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-macos.yml  ci.yml  cron.yml  release.yml
contrib/: resolvers.txt  subdomains-top1mil-20000.txt  subdomains-top1mil-5000.txt
contrib/shell-completions/: _mhost  mhost.bash  mhost.fish
distribution/deb/: .gitignore  Makefile
distribution/deb/templates/DEBIAN/: control  postinst
distribution/docker/: Dockerfile  Makefile
distribution/homebrew/: mhost.rb
distribution/redhat/: mhost.spec
doc/adr/: 0002-output-guards-in-module-output.md  0004-output-guards-in-module-output.md  0005-separate-check-and-soa-check-modules.md
docs/: .gitignore  Makefile  mhost.1.md  records.md  review.md  verify.sdd.md
docs/adr/: 0001-record-architecture-decisions.md  0002-output-guards-in-module-output.md  0003-separate-cli-tests-for-ci-and-no-ci.md  0005-prefer-cli-parameters-over-etc-resolv-conf.md
docs/man1/: mhost.1
examples/: lookup_json.rs  lookup_summary.rs  multi_lookup.rs  multi_lookups.rs  multi_resolvers.rs  predefined_resolvers.rs  resolvers_from_file.rs  rnd_lookups.rs  soa_check.rs  statistics.rs  subnet_ptr_lookup.rs  system_resolvers.rs
fuzz/: .gitignore  Cargo.toml  Makefile
fuzz/afl-input/afl_name_to_ip_addr/: addr1
fuzz/afl-input/afl_nameserver_config/: config3  config4  config7
fuzz/afl-input/afl_parsed_txt/: txt2  txt3
fuzz/afl-input/afl_service_spec/: service_spec1  service_spec2  service_spec3
fuzz/afl-input/name_to_ip_addr/: addr2
fuzz/afl-input/nameserver_config/: config2  config5  config6  config8  config9
fuzz/afl-input/parsed_txt/: txt1
fuzz/dicts/: name_to_ip_addr.txt  nameserver_config.txt  parsed_txt.txt  service_spec.txt
fuzz/fuzz_targets/: afl_name_to_ip_addr.rs  afl_nameserver_config.rs  afl_parsed_txt.rs  afl_service_spec.rs  name_to_ip_addr.rs  nameserver_config.rs  parsed_txt.rs  service_spec.rs
src/: defaults.rs  diff.rs  dns.rs  error.rs  estimate.rs  future.rs  get.rs  lib.rs  lookup.rs  main.rs  nameserver.rs  output.rs  query.rs  resolver.rs  serialize.rs  statistics.rs  summary.rs  system_config.rs  txt_records.rs  ungefiltert_surfen.rs
src/app/: app.rs  app_config.rs  cli.rs  cli_parser.rs  config.rs  console.rs  global_config.rs  logging.rs  lookup.rs  mod.rs  output.rs  resolver.rs  run.rs  soa_check.rs  utils.rs
src/app/common/: mod.rs  name_builder.rs  ordinal.rs  rdata_format.rs  record_type_info.rs  records.rs  reference_data.rs  rendering.rs  resolver_args.rs  statistics.rs  styles.rs  subdomain_spec.rs
src/app/common/discover/: ct_logs.rs  mod.rs  srv_probing.rs  (+2 more)
src/app/mdive/: app.rs  discovery.rs  dns.rs  lints.rs  mod.rs  ui.rs
src/app/mhost/: app_config.rs  cli_parser.rs  console.rs  logging.rs  mod.rs  resolver.rs
src/app/modules/: completions.rs  mod.rs
src/app/output/: json.rs  mod.rs  records.rs  styles.rs
src/diff/: mod.rs  soa.rs
src/lints/: caa.rs  cnames.rs  mod.rs  ttl.rs
src/nameserver/: load.rs  mod.rs  parser.rs  predefined.rs
src/output/: json.rs  mod.rs  styles.rs  summary.rs
src/output/summary/: lookups.rs  mod.rs  whois.rs
src/resolver/: buffer_unordered_with_breaker.rs  builder.rs  delegation.rs  error.rs  lookup.rs  mod.rs  predefined.rs  query.rs  raw.rs
src/resources/: dnssec_validation.rs  mod.rs  rdata.rs  record.rs  record_type.rs  zone.rs
src/resources/rdata/: caa.rs  dnssec.rs  hinfo.rs  mod.rs  mx.rs  naptr.rs  null.rs  openpgpkey.rs  soa.rs  srv.rs  sshfp.rs  svcb.rs  tlsa.rs  txt.rs  unknown.rs
src/services/: error.rs  mod.rs  ripe_stats.rs
src/services/ripe_stats/: mod.rs  service.rs
src/services/server_lists/: mod.rs  opennic.rs  parser.rs  public_dns.rs
src/services/whois/: mod.rs  service.rs
src/statistics/: lookups.rs  mod.rs  server_lists.rs  whois.rs
src/utils/: buffer_unordered_with_breaker.rs  deserialize.rs  mod.rs  serialize.rs  tests.rs
test-env/: Dockerfile
test-env/dns1/: example.com-zone.conf
test-env/dns2/: example.com-zone.conf
test-env/dns3/: example.com-zone.conf
tests/: Makefile  cli_output_tests.rs  docker-compose-linux.yml  docker-compose-osx.yml  mhost.rs  resolvers-linux.txt  resolvers-osx.txt
tests/dns1/: example.com-zone.conf
tests/dnsmasq.d/: test-zone.conf
tests/lit/: check-example.com.output  check-partial_results-example.com.output  check-partial_results_intermediate_lookups-example.com.output  diff-example.com.output  discover-example.com.output  discover-no-ct-logs-example.com.output  discover-partial_results-example.com.output  discover-partial_results-subdomains_only-example.com.output  discover-quiet-example.com.output  discover-quiet-partial_results-example.com.output  dnssec-cloudflare.com.output  domain-lookup-all-example.com.output  domain-lookup-example.com.output  domain-lookup-partial_results-example.com.output  info-list.output  info-record-type.output  info-subdomain.output  info-unknown.output  list-predefined.output  list_predefined.output  list_predefined.output-no-ci  lookup-8_8_8_8.output  lookup-all-example.com.output  lookup-all-predefined-example.com.output  lookup-dns_google.output  lookup-example.com.output  lookup-mode_uni-example.com.output  lookup-quiet-example.com.output  lookup-quiet-whois-example.com.output  lookup-t-dnskey-cloudflare.com.output  lookup-t-dnskey-example.com.output  lookup-t-ds-cloudflare.com.output  lookup-t-https-cloudflare.com.output  lookup-t-nsec-cloudflare.com.output  lookup-whois-example.com.output  lookup_dns_google.output  lookup_predefined.output-no-ci  no_args_help.output  propagation-example.com.output  soa_check-example.com.output  (+5 more)
tests/lit/fixtures/: example.com.zone
(+122 files in other folders)
