[package]
name = "mhost"
version = "0.3.0"
authors = ["Lukas Pustina <lukas@pustina.de>"]
edition = "2018"
description = "More than host - uses multiple DNS servers massively parallel and compares results"
repository = "https://github.com/lukaspustina/mhost.git"
readme = "README.md"
license = "MIT/Apache-2.0"
categories = ["command-line-utilities"]
keywords = ["network", "dns", "host", "dig", "cli"]
include = [
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "CHANGELOG.md",
  "**/*.rs",
  "Cargo.toml",
]
build = "build.rs"

[[bin]]
name = "mhost"
path = "src/bin/mhost.rs"
doc = false
required-features = ["app"]

[lib]
name = "mhost"
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1", optional = true }
clap = { version = "2", optional = true }
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3.*"}
hostname = { version = "0.3", optional = true }
humantime = { version = "2", optional = true }
indexmap = "1"
ipnetwork = "0.17"
lazy_static = "1.4"
lru_time_cache = "0.11"
nom = "5"
rand = "0.8"
# Sync with trust-dns-resolver and tokio if possible, to reduce dependencies to build and link
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "trust-dns"] }
pin-project = "1"
resolv-conf = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
tabwriter = { version = "1", optional = true }
thiserror = "1"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"], optional = true }
trust-dns-resolver = { version = "0.20", features = ["tokio-runtime", "dns-over-rustls", "dns-over-https-rustls", "dnssec-ring", "system-config", "serde-config"] }
yansi = "0.5"

[build-dependencies]
clap = { version = "2", default-features = false, features = ["suggestions"] }

[dev-dependencies]
tracing-log = "0.1"
tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"] }
lit = "1"
spectral = "0.6"

[features]
app = ["anyhow", "clap", "hostname", "humantime", "tabwriter", "tracing-log", "tracing-subscriber"]

[profile.release]
lto = true
overflow-checks = true
panic = "abort"

